# Skillbox_testTask

./: CMakeLists.txt  README.md
project/: main.cpp
project/common/: Matrix.h
project/librobo/: IRobot.h  Robot2D.cpp  Robot2D.h  Robot3D.cpp  Robot3D.h
project/test/: gtests.cpp
